# not-a-recruiter

./: .gitignore  .sample.env  LICENSE  README.md  pyproject.toml  pytest.ini
config/: sample_config.json
not_a_recruiter/: __main__.py  cli.py  pipelines.py
